results/583724452060590ddf5e1459b2c5d1c0/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 583724452060590ddf5e1459b2c5d1c0, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
